Removed padding bottom element to prevent difficult to scroll to bottom (flicker/jumps)

--- a/src/app/pages/observation-list/observation-list.page.scss
+++ b/src/app/pages/observation-list/observation-list.page.scss
@@ -15,10 +15,6 @@ ion-item-divider {
     margin-top: 24px;
     margin-bottom: 0px;
   }
-
-  &.virtual-list-footer {
-    height: 50px;
-  }
 }
 
 virtual-scroller {
